Removing JDK preview argument for test calls.